--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,29 @@ on:
 jobs:
 
   test:
+    name: Test
     runs-on: ubuntu-latest
+
+    # Service containers to run with `container-job`
+    services:
+        # Label used to access the service container
+        postgres:
+          # Docker Hub image
+          image: 17-alpine
+          # Provide the password for postgres
+          env:
+            POSTGRES_UDRT: root
+            POSTGRES_PASSWORD: secret
+            POSTGRES_DB: simple_bank
+          # Set health checks to wait until postgres has started
+          ports:
+            - 5432:5432
+          options: >-
+            --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
+
     steps:
     - uses: actions/checkout@v4
 
@@ -24,6 +46,15 @@ jobs:
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
+
+    - name: Install Golang-migrate
+      run: |
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.2/migrate.linux-amd64.tar.gz | tar xvz
+        sudo mv migrate.linux-amd64 /usr/bin/migrate
+        which migrate
+
+    - name: Run Database Migrations
+      run: make migrateup
 
     - name: Test
       run: make test
