--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,7 @@ jobs:
         # Label used to access the service container
         postgres:
           # Docker Hub image
-          image: 17-alpine
+          image: postgres:17-alpine
           # Provide the password for postgres
           env:
             POSTGRES_UDRT: root
