--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,9 +49,9 @@ jobs:
 
     - name: Install Golang-migrate
       run: |
-        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.2/migrate.linux-amd64.tar.gz | tar xvz
-        sudo mv migrate.linux-amd64 /usr/bin/migrate
-        which migrate
+       curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.2/migrate.linux-amd64.tar.gz | tar xvz
+       sudo mv migrate /usr/bin
+       which migrate
 
     - name: Run Database Migrations
       run: make migrateup
