--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
           image: postgres:17-alpine
           # Provide the password for postgres
           env:
-            POSTGRES_UDRT: root
+            POSTGRES_USER: root
             POSTGRES_PASSWORD: secret
             POSTGRES_DB: simple_bank
           # Set health checks to wait until postgres has started
