--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches: [ "main" ]
 
-permissions:       # 👈 workflow-level permissions
+permissions:
   id-token: write
   contents: read
-
+    
 jobs:
 
   build:
@@ -19,9 +19,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::330552994974:role/github-ci-role
+          role-to-assume: arn:aws:iam::330552994974:role/GitHubActionsECRPushRole
           aws-region: ap-south-1
 
       - name: Login to Amazon ECR
@@ -36,3 +36,7 @@ jobs:
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+      
+      - name: Print image URI
+        run: |
+          echo "Image pushed to: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
