--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,12 @@ jobs:
     name: Build Image
     runs-on: ubuntu-latest
 
+    env:
+        AWS_REGION: ap-south-1                      # 🔁 Your AWS region
+        AWS_ACCOUNT_ID: 330552994974              # 🔁 Your AWS account ID
+        ECR_REPOSITORY: backend-with-go/simplebank          # 🔁 Your ECR repository name
+        IMAGE_TAG: ${{ github.sha }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -22,21 +28,26 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: arn:aws:iam::330552994974:role/GitHubActionsECRPushRole
-          aws-region: ap-south-1
+          aws-region:  ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
+        run: aws ecr get-login-password --region $AWS_REGION | \
+               docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
 
       - name: Build, tag, and push docker image to Amazon ECR
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: backend-with-go/simplebank
-          IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          IMAGE_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY
+
+          echo "Building Docker image..."
+          docker build -t $IMAGE_URI:$IMAGE_TAG .
+
+          echo "Pushing image with tag $IMAGE_TAG..."
+          docker push $IMAGE_URI:$IMAGE_TAG
+
+          echo "Tagging as latest..."
+          docker tag $IMAGE_URI:$IMAGE_TAG $IMAGE_URI:latest
+          docker push $IMAGE_URI:latest
       
       - name: Print image URI
         run: |
-          echo "Image pushed to: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          echo "Docker image pushed: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG"
