--- a/deploy/deploy.yml
+++ b/deploy/deploy.yml
@@ -52,10 +52,10 @@ jobs:
           IMAGE_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY
 
           echo "Building Docker image..."
-          docker build -t $IMAGE_URI:$IMAGE_TAG -t latest .
+          docker build $IMAGE_URI:$IMAGE_TAG
 
           echo "Pushing image with tag $IMAGE_TAG..."
-          docker push -a $IMAGE_URI
+          docker push $IMAGE_URI
 
           echo "Tagging as latest..."
           docker tag $IMAGE_URI:$IMAGE_TAG $IMAGE_URI:latest
