--- a/app.env
+++ b/app.env
@@ -4,3 +4,4 @@ SERVER_ADDRESS=0.0.0.0:8080
 STOP_FILE_PATH=./backend-with-go
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
+REFRESH_TOKEN_DURATION=24h
