--- a/app.env
+++ b/app.env
@@ -1,7 +1,9 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
-SERVER_ADDRESS=0.0.0.0:8080
-STOP_FILE_PATH=./backend-with-go
+HTTP_SERVER_ADDRESS=0.0.0.0:8080
+GRPC_SERVER_ADDRESS=0.0.0.0:9090
+STOP_FILE_PATH=/home/harrypotter/go/src/backend-with-go
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
 REFRESH_TOKEN_DURATION=24h
+RUN_GRPC=true
